[gd_scene load_steps=13 format=3 uid="uid://cp00cwi43lk6s"]

[ext_resource type="Script" path="res://scripts/npc/DialogueControl.gd" id="1_ako86"]
[ext_resource type="Script" path="res://scripts/npc/dialogue.gd" id="1_jhnqp"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/DialogueBox.gd" id="1_niad8"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeWait.gd" id="2_20lgp"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeGhost.gd" id="3_mkd4t"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeMatrix.gd" id="4_s7nms"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_y7iyw"]
height = 0.396772
radius = 0.257198

[sub_resource type="SystemFont" id="SystemFont_s2f7o"]
subpixel_positioning = 0

[sub_resource type="Theme" id="Theme_4d7cq"]
default_font = SubResource("SystemFont_s2f7o")
default_font_size = 24

[sub_resource type="RichTextEffect" id="RichTextEffect_erskn"]
script = ExtResource("2_20lgp")

[sub_resource type="RichTextEffect" id="RichTextEffect_rbq6v"]
script = ExtResource("3_mkd4t")

[sub_resource type="RichTextEffect" id="RichTextEffect_y8y1c"]
script = ExtResource("4_s7nms")

[node name="Dialogue" type="Node3D"]
script = ExtResource("1_jhnqp")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(3.5, 0, 0, 0, 3.5, 0, 0, 0, 3.5, 2.08165e-12, 2.08165e-12, 2.08165e-12)
shape = SubResource("CylinderShape3D_y7iyw")

[node name="DialogueControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ako86")

[node name="BoxContainer" type="BoxContainer" parent="DialogueControl"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -600.0
offset_top = -380.0
offset_right = 600.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(2.08165e-12, 2.08165e-12)

[node name="DialogueBox" type="Panel" parent="DialogueControl/BoxContainer"]
visible = false
custom_minimum_size = Vector2(1200, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_4d7cq")
script = ExtResource("1_niad8")
hide_portrait = true
custom_effects = Array[RichTextEffect]([SubResource("RichTextEffect_erskn"), SubResource("RichTextEffect_rbq6v"), SubResource("RichTextEffect_y8y1c")])

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
